[gd_scene load_steps=6 format=3 uid="uid://c7pe1q2xscf8x"]

[ext_resource type="Texture2D" uid="uid://dfjliqo6f6v24" path="res://Assets/Sprites/InteriorObjects/dropButtonClosed.png" id="1_gk3yf"]
[ext_resource type="Script" path="res://Scripts/engine_drop_button.gd" id="1_ie7x4"]
[ext_resource type="Texture2D" uid="uid://dq4h8q1fwh6vc" path="res://Assets/Sprites/InteriorObjects/dropButtonOpen.png" id="2_vrjcj"]
[ext_resource type="Texture2D" uid="uid://dqe8x4u472w2o" path="res://Assets/Sprites/InteriorObjects/dropButtonPressed.png" id="3_x805h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qtg05"]
size = Vector2(20, 33)

[node name="EngineDropButton" type="Node2D"]
script = ExtResource("1_ie7x4")

[node name="EngineDropButtonClosedSprite" type="Sprite2D" parent="."]
position = Vector2(0, 50)
texture = ExtResource("1_gk3yf")

[node name="EngineDropButtonOpenSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 50)
texture = ExtResource("2_vrjcj")

[node name="EngineDropButtonPressedSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 50)
texture = ExtResource("3_x805h")

[node name="EngineDropButtonArea2D" type="Area2D" parent="."]
collision_layer = 48
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="EngineDropButtonArea2D"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_qtg05")
